[tool]
[tool.poetry]
name = "xcat"
version = "1.0.5"
description = "A command line tool to automate the exploitation of blind XPath injection vulnerabilities"
license = "MIT"
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License"]
homepage = "https://github.com/orf/xcat"
authors = ["Tom Forbes <tom@tomforb.es>"]
readme = "README.md"
include = [
    "LICENSE",
    "README.md"
]

[tool.poetry.scripts]
xcat = "xcat.cli:cli"

[tool.poetry.dependencies]
python = ">=3.7"
aiodns = "*"
aiohttp = "==3.*,>=3.0.0"
appdirs = "*"
cchardet = "*"
click = "*"
colorama = "*"
prompt-toolkit = "<4"
xpath-expressions = "==1.*,>=1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
